see that file and the CVS log for more historic information.  The
entire history of the project is available through CVS.

----------------------------------------------------------------------
--- 2007-06-XX  Release 7.10.3                                     ---
----------------------------------------------------------------------

* improved photon map irradiance progress reporting - Erik Greenwald
* tab-completion for mged - John Anderson
* fixed various issues reported by flawfinder - Erik Greenwald
* fixed photon-mapping lighting model crash - Erik Greenwald
* ADRT libtie bug fixes and performance enhancements - Justin Shumaker
* mged now tests for vim before vi for text editing - Sean Morrison
* fixed parallel operability bug on the Intel Mac - Erik Greenwald
* detect actually available CPUs on an Intel Mac - Erik Greenwald
* Z clipping now off by default in mged - Sean Morrison
* add performance optimizations to the pipe primitive - John Anderson
* handle discontinuous changes in pipe inner radii - John Anderson
* allow rt more than available cpus for debugging - Sean Morrison
* fixed small TGC (cone) primitive raytrace prep bug - Sean Morrison
* increased output precision from nirt/query_ray - Sean Morrison
* removed op-bw for reading Optronics Scanner images - Sean Morrison
* beset - Ben's Evolutionary Shape Extraction Tool - Ben Poole


----------------------------------------------------------------------
--- 2007-05-16  Release 7.10.2                                     ---
----------------------------------------------------------------------

* support infinite # of shadow rays in the raytracers - Sean Morrison
* improved anim_hardtrack manual page documentation - Erik Greenwald
* added 'bomb' command to mged for script termination - Sean Morrison
* mged and pl-X automatically focus to X11 on Mac OS X - Sean Morrison
* pl-X functionality enhancements for displaying plots - Sean Morrison